Changes for 4.2.5rc1

New features:
..F....PS. [ZBXNEXT-5176,ZBXNEXT-5205] blocked zero item history/trends period being overridden by global configuration (miks, wiper)

Bug fixes:
.......PS. [ZBX-16287] fixed compiler warnings in host.c; thanks to Glebs Ivanovskis for the patch (asestakovs)
...G...PS. [ZBX-16103] reduced PCRE recursion limit (asestakovs)
..F....... [ZBX-16289] fixed async dashboard widget update (miks)
A......... [ZBX-13266] improved performance of the SQL queries with lot of IDs in the condition (Sasha)
....I..... [ZBX-16277] fixed compilation Zabbix agent for Windows with options available for Windows Vista and newer (MVekslers)
...G...PS. [ZBX-16239] fixed compilation warining related to prototypes of module API functions (viktors)
.......PS. [ZBX-16207] fixed compilation warining related to possible use of uninitialised variable; thanks to Glebs Ivanovskis for the patch (viktors)
.......PS. [ZBX-16256] eliminated possible infinite fetch loop with OracleDB (viktors)
..F....... [ZBX-15343] fixed JS memory leak in hintboxes in graph widget (Ivo)
..F....... [ZBX-16329] fixed duplicate value checking in trigger action conditions (Ivo)
A......... [ZBX-15562] reworked history.get API method; fixed output as well as other known issues in history API (miks, Sasha)
..F....... [ZBX-15976] fixed groups filter being reset after check now request in items (talbergs)
..F....... [ZBX-16135] fixed error messages in XML export files (averza)
A......... [ZBX-16213] fixed PostgreSQL bad performance on history tables (averza)
..F....... [ZBX-16176] preserve trailing spaces in history values (averza)
..F....... [ZBX-16169] improved performance of map navigation tree widget (miks)
..F....... [ZBX-16288] fixed when unknown resource logged in audit log when working with dashboards (vasilijs)
A......... [ZBX-16134] fixed duplicate triggers can be created using API and XML import (agriscenko)